--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -172,6 +172,8 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 						↳ <a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a>
 						<br>
 						↳ <a href="F2U/materials.html#pix" target="iframe_d">pixels</a>
+						<br>
+						↳ <a href="F2U/materials.html#cur" target="iframe_d">cursors</a> <img src="/!g/pix/new1.gif">
 					</ul>
 
 					<li><a href="F2U/stamps.html" target="iframe_d">stamps</a></li>
