--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -142,6 +142,7 @@
 		<li><a href="https://csscompressor.com/" target="_blank">CSS compressor</a> - compresses file sizes!</li>
 		<li><a href="https://javascript-compressor.com/" target="_blank">JS compressor</a> - compresses file sizes!</li>
 		<li><a href="https://tools.pingdom.com/" target="_blank">website speed tester</a> - tells you how fast does your website loads! very neat bc it also tells you which file types are taking most of the space in the page</li>
+		<li><a href="https://www.cursor.cc/" target="_blank">cursor.cc</a> - edit cursors!</li>
 
 		<h3 id="tut">tutorials / guides</h3>
 		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! - easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
