--- a/website/notebook/F2U/materials.html
+++ b/website/notebook/F2U/materials.html
@@ -8,7 +8,7 @@
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="F2U.css" rel="stylesheet" type="text/css" media="all">
-		<!-- tooltip shit -->
+	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
@@ -97,7 +97,7 @@ vertical-align:top;
 		</details>
 
 		<h2 id="cur">cursors</h2>
-		<p>rei chiquita cursors <a title="click to download .cur file" href="/notebook/!g/rei-grey.cur"><img src="/notebook/!g/rei-chiquita-pix-blu.png" width="26"></a> <a title="click to download .cur file" href="/notebook/!g/rei-blu.cur"><img src="/notebook/!g/rei-chiquita-pix-grey.png" width="26"></a></p>
+		<p>rei chiquita cursors <a title="click to download .cur file" href="/notebook/!g/rei-blu.cur"><img src="/notebook/!g/rei-chiquita-pix-blu.png" width="26"></a> <a title="click to download .cur file" href="/notebook/!g/rei-grey.cur"><img src="/notebook/!g/rei-chiquita-pix-grey.png" width="26"></a></p>
 		<details>
 			<summary>use custom cursors on your sites with this code:</summary>
 			<textarea>body {
