--- a/website/projects/index.html
+++ b/website/projects/index.html
@@ -31,7 +31,7 @@
 				<li><a title="github repository" href="https://github.com/doqmeat/F2U-html-templates">HTML templates</a> - templates for HTML pages i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small>
 				</li>
 				<ul>
-					<li><b>notebook</b> - <a href="https://doqmeat.neocities.org/notebook/F2U/preview/notebook" target="_blank">live preview 1</a> / <a href="/F2U-html-templates/notebook">live preview 2</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">code</a></li>
+					<li><b>notebook</b> - <a href="/notebook/F2U/preview/notebook" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a></li>
 				</ul>
 			</ul>
 			<h2 style="margin:3px;">misc</h2>
