--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -116,7 +116,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv currently notdone single adventure">
 			<a title="the dog island (ps2)" href="dog-island/index.html" target="iframe_a"><img src="dog-island.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone toplay single rpg action">
+		<div class="filterDiv finished fav single rpg action">
 			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img class="vgimg" src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
 		</div>
 		<div class="filterDiv notdone single action shooter rpg">
