--- a/website/vgs/fallout-1/index.html
+++ b/website/vgs/fallout-1/index.html
@@ -22,6 +22,7 @@
 		<div class="info"><b>release date: </b> october 10, 1997</div>
 		<div class="info"><b>developer: </b> interplay entertainment</div>
 		<div class="info"><b>genre/type: </b> rpg, action </div>
+		<div class="info"><b>status: </b> finished!</div>
 
 		<h3>logs</h3>
 		<p><span class="date">11.apr.24</span> i played this game at around summer of 2020 after longing for some fallout for a while bc i had so much fun with <a href="/vgs/fallout-4/index.html">fallout 4</a> when it released. i boot up fallout, made my dumbass character. and oh boy. :D</p>
@@ -41,6 +42,11 @@
 		<img src="happy-valentines.jpg" width="100%" alt="happy valentine's day">
 		<p>i've also recently discovered that fallout's creator (tim cain) has a <a href="https://www.youtube.com/@CainOnGames" target="_blank">youtube channel</a> and he honestly gives out cool grandpa vibes. he's been doing short videos about being a game dev (for the most part) and of course, he also has done some videos talking about the development for fallout. i've been watching his videos almost on a daily basis and i honestly just love hearing him talk about stuff. he seems like a very chill dude.</p>
 		<hr>
+
+		<p><span class="date">20.may.24</span> and so... after 44 hours i have finished this game. i really want to thank the character editor i downloaded because good lord. this game is not fucking easy. DESPITE this, i had such an awesome time with this game's story! as a big big fan of fallout <small>just look at my domain...</small> i just love exploring the world that brought it all to live and how different it is from the modern games. i can't really talk That much because i've only completed fallout 4, havent finished new vegas, never touched fallout 3. but it is clearly different to what it once was. and that is not bad in it of it self.</p>
+		<p>what i was most excited for while playing this game was def to meet the master because i had seen screenshots of him and he just looks so fucking interesting and his design is so crazy. what a real freakazoid!!! this is honestly an insanely good villain. but i also find it extremely funny how <span class="spoilers">the "best" way to beat him was just to go <i>erm actually....... your mutants cannot fuck</i> for him to go <i>oh.... i guess i'll kill myself and everyone else in this room</i>. i also loved how <span class="spoilers">since he is an amalgamation of a bunch of creatures, he had different voices as he spoke to you.</span> i just love the attention to details that is in this game.</p>
+		<p>the brotherhood of steel is also pretty different from what i've seen in fallout 4. they have like... idk just more to them! all the companions that i once had all died... so sorry... specially dogmeat... my poor meow meow. bark bark.</p>
+		<p>overall: this game was a very cool experience has a fan of the series! again, i don't think i would have ever completed it without cheats so thank god for that! i will now watch some video essays i've been saving for when i finish this game.</p>
 
 		<h4>ref &amp; links</h4>
 		<li><a href="https://cdn.akamai.steamstatic.com/steam/apps/38400/manuals/Fallout_manual_English.pdf?t=1572025441" target="_blank">official fallout manual</a></li>
