--- a/website/collection/internet-graphics/index.html
+++ b/website/collection/internet-graphics/index.html
@@ -38,6 +38,7 @@
 		<div id="stamps" class="container">
 
 			<a href="https://www.deviantart.com/aetheriaa/art/Shooting-Star-Stamp-593476133" target="_blank"><img src="!g/shootingstars.gif"></a>
+			<a href="https://emeowly.gay/" target="_blank"><img src="!g/catwithflowers.png"></a>
 			<a href="https://www.deviantart.com/moonxviii/art/Mob-Blooms-645165434" target="_blank"><img src="!g/mobflower.png"></a>
 			<img src="!g/typos.gif">
 			<a href="https://www.deviantart.com/cutebunny666/art/055-656902213" target="_blank"><img src="!g/055_by_cutebunny666_.png"></a>
