guestbook page created

--- a/website/home.html
+++ b/website/home.html
@@ -75,7 +75,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>sitely</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
-			<a href="https://doqmeat.123guestbook.com/" class="outlink"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
+			<a href="/guestbook"><img src="/!g/pix/bear-inside-mail.gif"> guestbook <img src="/!g/pix/new1.gif"></a>
 			<a href="https://my.cbox.ws/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/msgbbl.gif"> chatbox</a>
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
@@ -88,7 +88,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<img class="intro-img" align="left" style="max-width:100%" alt="">
 			<p>hello! my name is <b class="me">des</b> and this is my humble little corner on the internet. it mostly serves as a digital journal where i share whatever i want, however i want it! coding this site has been the most fun i've had online in a long time. so thank you for checking it out! i hope you find something you like.</p>
 
-			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"> every single message means a ton to me! thank you for visiting me ヾ(￣▽￣)</p>
+			<p>here's my <a href="/guestbook">guestbook</a> if you'd like to write a little message about your visit <img src="!g/pix/cat-heart.gif"> every single message means a ton to me! thank you for visiting my site! ヾ(￣▽￣)</p>
 
 			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail</a> me or create a github issue.</p>
 
@@ -122,18 +122,19 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="vgs/fallout-1/index.html">fallout</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/paranormasight">paranormasight</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a>, <a href="/projects/learning-js/index.html">learning JS</a></p>
-			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
+			<p><span class="hl">working on:</span> <a href="/projects/learning-js/index.html">learning JS</a></p>
+			<p><span class="hl">coding/writing:</span> <a href="https://siinamota.doqmeat.com" target="_blank">siinamota fansite</a></p>
 			<p class="date">last updated on 20.may.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>20.may.24: <a href="/journal">journal</a> log: <i>free from uni</i> + added birthday counter to homepage status!</li>
+			<li>21.may.24: created <a title="I JUST FOUND OUT 123guestbook is closing" href="/guestbook">guestbook</a> page!</li>
+			<li>20.may.24: journal log: <a href="/journal">free from uni</a> +<a title="i finished it!" href="/vgs/fallout-1">fallout</a> log</li>
 			<li>18.may.24: <a href="/collection/plushies/index.html">plushies</a> collection page is now live!</li>
 			<li>12.may.24: new featured song &amp; album in <a href="/music">music</a></li>
 			<li>09.may.24: added may page to <a href="/scrapbook/2024#may">scrapbook</a> + more <a href="collection/cats/index.html">cats</a></li>
@@ -378,7 +379,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			setTimeout(function() {
 				titleScroller(text.substr(1) + text.substr(0, 1));
 			}, 500);
-		}(" doqmeat.com ☆⌒(*＾-゜)v☆ "));
+		}(" welcome to doqmeat.com ☆⌒(*＾-゜)v☆ enjoy your stay!"));
 
 	</script>
 	<script src="!f/homepage-v3/last.fm.js">
