--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -113,6 +113,10 @@
 		<img src="/!g/pix/dumy.gif">
 		<img src="/!g/pix/cat-paw.gif">
 		<img src="/!g/pix/cathi.gif">
+		<img src="/!g/pix/gaycat.gif">
+		<img src="/!g/pix/catkiss.gif">
+		<img src="/!g/pix/cat.gif">
+
 
 
 		<br><!-- irregular size -->
@@ -302,6 +306,7 @@
 		<a href="https://sorahana.ciao.jp/" target="_blank"><img src="/!g/pix/hw10.gif"></a>
 		<img src="/!g/pix/bear.gif">
 		<img src="/!g/pix/bear-inside-mail.gif">
+		<img src="/!g/pix/smileyface.gif">
 
 		<h3 id="tiny">tinnier</h3>
 
