--- a/website/notebook/F2U/materials.html
+++ b/website/notebook/F2U/materials.html
@@ -82,6 +82,10 @@
 			<div class="tiled-bg" style="background:url(/!g/bg/whiteline.jpg)"></div>
 		</a>
 
+		<a class="link" href="/!g/bg/whiteline.jpg" target="_blank">
+			<div class="tiled-bg" style="background:url(/!g/bg/pinktile.gif)"></div>
+		</a>
+
 		<h2 id="pix">pixels</h2>
 
 		<p><img src="/!g/web/materials/outlink2.png"> i made this little pixel to put on outbound links!
