fallout new vegas

--- a/website/home.html
+++ b/website/home.html
@@ -122,7 +122,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/paranormasight">paranormasight</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/fallout-new-vegas/index.html">fallout: new vegas</a>, <a href="/vgs/paranormasight">paranormasight</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi, twin peaks S2</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
@@ -133,6 +133,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>22.may.24: <a href="/vgs/fallout-new-vegas/index.html">new vegas</a> log</li>
 			<li>21.may.24: created <a title="I JUST FOUND OUT 123guestbook is closing" href="/guestbook">guestbook</a> page!</li>
 			<li>20.may.24: journal log: <a href="/journal">free from uni</a> +<a title="i finished it!" href="/vgs/fallout-1">fallout</a> log</li>
 			<li>18.may.24: <a href="/collection/plushies/index.html">plushies</a> collection page is now live!</li>
@@ -355,7 +356,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<p><a href="/notebook/links/credit.html#home">credit for materials used!</a> / homepage runing on v3!</p>
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
 			on the web since <b>april 11, 2023</b> <img src="/!g/pix/catroll.gif" alt="">
-			hosted on <a class="outlink" href="https://neocities.org/" target="_blank">neocities</a></p>
+			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a></p>
 		<p> <img src="/sites/!g/doqmeat.png">
 			<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
