--- a/website/vgs/fallout-new-vegas/index.html
+++ b/website/vgs/fallout-new-vegas/index.html
@@ -12,16 +12,36 @@
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
+	<style>
+		body {
+			background-image: url(bg.png);
+		}
+
+		main,
+		footer {
+			background: #f8f2df;
+		}
+
+	</style>
 </head>
 
 <body>
 
-	<div id="iframepc">
+	<main>
 		<h2>fallout new vegas</h2>
 		<div class="info"><b>release date: </b> october 19, 2010</div>
 		<div class="info"><b>developer: </b> obsidian entertainment</div>
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
+		<div class="info"><b>status:</b> not finished</div>
 		<h3>logs</h3>
+		<p><span class="date">22.may.24</span> told myself i would start a new save file as soon as i finished playing <a href="/vgs/fallout-1/index.html">fallout</a> and here we are. we are so back.</p>
+		<center>
+			<img src="may22%20(2).jpg" width="100%">
+			<p><small>my little angel</small></p>
+			<img src="may22%20(3).jpg" width="100%">
+			<p><small>chilling with oomf</small></p>
+		</center>
+		<hr>
 		<p><span class="date">11.apr.24</span> first played around the same time as <a href="/vgs/fallout-1/index.html">fallout</a> aka summer 2020 and probably once again in summer of 2021. i think i am halfway through the game but imma be real. i have 30 hrs in on this game. i kinda don't remember a lot of what's happening when i stopped playing it KFDLDFKFD. so when i pick it up again whenever, i will probably gonna have to do some light reading.</p>
 		<p>i'm pretty sure i had my fun in the 30 hrs that i played. i do remember the songs from the radio being a bit samey........... i felt like there were not that many songs in there. at least from my memory.</p>
 		<p>this is my 2nd 3D fallout i've ever played after <a href="/vgs/fallout-4/index.html">fallout 4</a>. gun play is def a bit jankier. but like i can't really bitch about that when it does INDEED have a WAYYY better dialogue (+dialogue system) than FO4. the gay ppl were right. very charming and funny game as well. will probably pick it up again after finishing FO1. someday. on god 🙏</p>
@@ -33,8 +53,7 @@
 			<img src="fonv2.jpg" width="100%">
 		</center>
 
-
-	</div>
+	</main>
 	<footer><a href="/home">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
 </body>
 
