--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -119,7 +119,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv finished fav single rpg action">
 			<a title="fallout" href="fallout-1/index.html" target="iframe_a"><img class="vgimg" src="fallout-1/cover.jpg" alt="fallout" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone single action shooter rpg">
+		<div class="filterDiv currently notdone single action shooter rpg">
 			<a title="fallout new vegas" href="fallout-new-vegas/index.html" target="iframe_a"><img src="fallout-new-vegas/cover.jpg" class="vgimg" tabindex="0" alt="fallout new vegas"></a>
 		</div>
 		<div class="filterDiv finished rpg single">
