--- a/website/vgs/info.html
+++ b/website/vgs/info.html
@@ -53,7 +53,8 @@
 		<h3>change log</h3>
 
 		<div id="log">
-		<li>20.may.24 - log: <a href="fallout-1/index.html">fallout</a></li>
+			<li>22.may.24 - log: <a href="fallout-new-vegas/index.html">new vegas</a> + <small>from now on i'm gonna start logs from newest to oldest!</small></li>
+			<li>20.may.24 - log: <a href="fallout-1/index.html">fallout</a></li>
 			<li>17.apr.24 - log: <a href="fallout-1/index.html">fallout</a></li>
 			<li>14.apr.24 - added: <a href="botw/index.html">breath of the wild</a>, <a href="cattails/index.html">cattails</a>, <a href="gris/index.html">gris</a>, <a href="hollow-knight/index.html">hollow knight</a>, <a href="milk-inside/index.html">milk inside a bag of milk</a>, <a href="rental/index.html">rental</a>, <a href="splatoon-2/index.html">splatoon 2</a></li>
 			<li>12.apr.24 - added: <a href="fallout-1/index.html">fallout</a>, <a href="fallout-new-vegas/index.html">fallout new vegas</a> <small>i just finished watching the fallout show, can you tell?</small>, <a href="cloud-gardens/index.html">cloud gardens</a></li>
@@ -72,7 +73,7 @@
 		</div>
 
 		<h3>lore</h3>
-		<p>i pretty much grew up playing video games :3</p>
+		<p>i pretty much grew up playing video games :3 i'd write more in here but i don't got much else to say. video games fun.</p>
 		<p><b>consoles i've had:</b> <s title="i don't remember what happened but it broke in the middle. maybe i let it fell...">DS lite</s>, <s title="the ring of death or whatever">xbox 360</s>, <s title="gave it to my cousin when i got a 3DS">DSi</s>, <s title="i think we sold this...">wii</s>, 3DS, wii u, <s title="i think i just need to buy a wired controller so i can be able to play it again LOL">PS4</s>, switch lite</p>
 		<p>honorable mention to my poor non-gamer laptops i've had to run games that weren't meant to be played in them.</p>
 
