--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -27,7 +27,7 @@
 		<a href="https://angel99.neocities.org" target="_blank"><img src="/sites/!g/angel99.gif"></a>
 		<a href="https://dokode.moe" target="_blank"><img src="/sites/!g/dokode.moe.gif"></a>
 		<a href="https://nyaa.neocities.org" target="_blank"><img src="/sites/!g/nyaa.gif"></a>
-		<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="https://gothiclolita.neocities.org/gothiclolita.png" width="88px"></a>
+		<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="/sites/!g/gothiclolita.jpg" width="88px"></a>
 		<a href="https://komichi.neocities.org" target="_blank"><img src="/sites/!g/komichi.png"></a>
 		<a href="https://nekonokuni.neocities.org" target="_blank"><img src="/sites/!g/nekonokuni.gif"></a>
 		<a href="https://incessantpain.neocities.org/" target="_blank"><img src="/sites/!g/incessantpain.gif"></a>
