--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -66,7 +66,10 @@
 			<li><a href="/photobook" target="_parent">photobook</a></li>
 			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
 			<li><a href="/projects">web projects</a></li>
-						<li><a href="/guestbook/index.html" target="_parent">guestbook</a> <img src="/!g/pix/new1.gif"></li>
+			<li><a href="/guestbook/index.html" target="_parent">guestbook</a> <img src="/!g/pix/new1.gif"></li>
+			<ul>
+				<li><a href="/guestbook/archive.html">archived 123guestbook</a></li>
+			</ul>
 			<li><b>misc pages</b></li>
 			<ul>
 				<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
