--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -77,7 +77,6 @@
 			<a title="fae - FAE!!! fae's website is so fucking cool to me i love this site a whole ton!!!! i love the intricate designs that all of their pages have. im just in awe every time i give em a visit! album shelf + dreams pages are some of my favs. oh did i mention that their art is really cool too? YUP!" href="https://faegardens333.neocities.org" target="_blank"><img src="!g/faegardens333.gif"></a>
 			<a title="princess - very cool site! always has a neat layout" href="https://princss.online" target="_blank"><img src="https://princss.online/media/images/buttons/princss_button.png"></a>
 			<a title="avery - soft and cozy blog" href="https://isopodz.neocities.org" target="_blank"><img src="https://isopodz.neocities.org/buttons/littleguybutton.jpg" alt="isopodz"></a>
-			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
 			<a title="harley - very simple but cute blog!" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
 			<a title="hues - really like their wardrobe page!" href="https://sillytime.neocities.org" target="_blank"><img src="!g/sillytime.png"></a>
 			<a title="mei - cool site with lots to see! " href="https://meixins.neocities.org" target="_blank"><img src="!g/meixins.gif"></a>
@@ -269,6 +268,7 @@
 			<a title="fruitgummie" href="https://fruitgummie.neocities.org/" target="_blank"><img src="!g/fruitgummie.gif" alt="fruitgummie"></a>
 			<a title="so colorful and wonderful" href="https://syntheticfruits,neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
 			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
+			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /> </a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -382,6 +382,7 @@
 			<a title="ava - very fun layout!" href="https://daintyeco.neocities.org" target="_blank"><img src="!g/daintyeco.gif"></a>
 			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
 			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
+			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
