--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -51,6 +51,8 @@
 			<img src="!g/jerm.gif">
 			<img src="!g/jermburg.gif">
 			<a href="https://sushi-pixels.neocities.org/"><img src="!g/saulstamp.gif"></a>
+			<a href="https://www.deviantart.com/btsoftii/art/Loona-Heart-Attack-Chuu-Stamp-1-769899284"><img src="!g/chuu.gif"></a>
+			<a href="https://www.deviantart.com/btsoftii/art/Loona-Heart-Attack-Yves-Stamp-2-769899251"><img src="!g/yves.gif"></a>
 			<img src="!g/cat_love.png">
 			<img src="!g/cat.png">
 			<a href="https://www.deviantart.com/crystal-kyogre/art/I-Support-Corn-Cat-Omnomnoming-93811742" target="_blank"><img src="!g/corncat.gif"></a>
@@ -153,6 +155,7 @@
 			<img src="!g/catsarepurrfect.gif">
 			<img src="!g/let-the-music-play.gif">
 			<img src="!g/blackcatslucky.gif">
+			<a href="https://caitsith.neocities.org/"><img src="!g/homura.gif"></a>
 			<img src="!g/eepy.gif">
 			<img src="!g/fruit.gif">
 			<img src="!g/softandwarm.webp">
@@ -161,6 +164,7 @@
 			<img src="!g/luvmyputer.gif">
 			<img src="!g/crying%20and%20throwing%20up.gif">
 			<img src="!g/strawberrykisses.gif">
+			<img src="!g/antimusk.gif">
 			<img src="!g/loveoninefrens.gif">
 			<img src="!g/shootingstar.gif">
 			<img src="!g/danger-to-society.gif">
