--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -127,6 +127,7 @@
 		<img src="/!g/deco/catblep.gif">
 		<img src="/!g/deco/catbox.gif">
 		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/deco/tora-cat%20(1).gif"></a>
+		<img src="/!g/deco/catsleeping1.gif">
 
 
 		<h3 id="other-emo">other emoticons</h3>
