--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -182,7 +182,7 @@
 			<a href="https://snewberry.neocities.org"><img style="image-rendering: pixelated" src="https://snewberry.neocities.org/snewbutton.gif" alt="Snewberry Button"></a>
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank"><img src="https://www.lexiqqq.com/assets/img/button_4.gif" alt="lexi"></a>
 			<a title="sweetlolita" href="https://sweetlolita.neocities.org" target="_blank"><img src="!g/sweetlolita.gif" alt="sweetlolita"></a>
-			<a href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
+			<a title=" vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
